update to latest Mongoose arch definitions

--- a/.cproject
+++ b/.cproject
@@ -94,7 +94,8 @@
 								<option id="com.crt.advproject.gcc.hdrlib.259136434" name="Library headers" superClass="com.crt.advproject.gcc.hdrlib" useByScannerDiscovery="false" value="com.crt.advproject.gcc.hdrlib.newlib" valueType="enumerated"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.compiler.option.preprocessor.def.symbols.1107723220" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
 									<listOptionValue builtIn="false" value="CPU_LPC54618J512ET180=1"/>
-									<listOptionValue builtIn="false" value="MG_ARCH=MG_ARCH_FREERTOS_LWIP"/>
+									<listOptionValue builtIn="false" value="MG_ARCH=MG_ARCH_FREERTOS"/>
+									<listOptionValue builtIn="false" value="MG_ENABLE_LWIP=1"/>
 									<listOptionValue builtIn="false" value="LWIP_TIMEVAL_PRIVATE=0"/>
 									<listOptionValue builtIn="false" value="CPU_LPC54618J512ET180_cm4"/>
 									<listOptionValue builtIn="false" value="CPU_LPC54618"/>
